k8s-deploy/deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sp-devbackend
    app.kubernetes.io/instance: sp-devbackend-instance
    app.kubernetes.io/version: '1.0.0'
    app.kubernetes.io/managed-by: kubectl
  name: sp-devbackend-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: sp-devbackend
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sp-devbackend
    spec:
      containers:
        - image: 746460560240.dkr.ecr.ap-south-1.amazonaws.com/seller-portal-dev:catalog-service-dev-latest
          imagePullPolicy: Always
          name: sp-devbackend
          ports:
            - containerPort: 8081
