k8s-deploy/deploy/documentdb-external-service.yml
apiVersion: v1
kind: Service
metadata:
   name: sp-devbackend
spec: 
   type: ExternalName
   externalName: sp-devbackend.caub6fvh4hyp.ap-south-1.docdb.amazonaws.com
