k8s-deploy/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: sp-devbackend
    app.kubernetes.io/instance: sp-devbackend-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: sp-devbackend
spec:
  selector:
    app: sp-devbackend
  type: NodePort
  ports:
   -  protocol: TCP
      port: 8081
      targetPort: 8081
      name: http-healthcheck
